sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: illegal start of simple pattern
      var case=getValeur(i)//valeur de la case de départ de chaque boucle
          ^AlgBubbleSort1:17: error: '=' expected but '}' found.
    }
    ^